completed projects section

--- a/bio.html
+++ b/bio.html
@@ -10,13 +10,12 @@
   <nav class="nav-bar">
     <a href="index.html" class="nav-link">Home</a>
     <a href="./bio.html" class="nav-link">Bio</a>
-    <a href="#projects" class="nav-link">Projects</a>
+    <a href="./projects.html" class="nav-link">Projects</a>
     <a href="#contact" class="nav-link">Contact</a>
   </nav>
 
   <section id="bio">
     <h1>Bio</h1>
-
     <div class="section-content">
       <img id="smiley" src="./pictures/me-smiling-resize.jpg" alt="a happy Tri">
       <p>  Growing up around the world, I have always been well accustomed to cultural diversity and rapid change. When I was
@@ -31,7 +30,6 @@
         the stage, firing away on my Canon 77D. Or hiking the trails of a State park, or natural reserve, camera-ready.</p>
       <img id="me" src="./pictures/me-resize.jpg" alt="doing what I do"> 
     </div>
-
   </section>
 
 </body>
